--- a/templates/change_password.html
+++ b/templates/change_password.html
@@ -1,7 +1,8 @@
 {% block content %}
 {% include "header.html" %}
 
-<div class="container py-5">
+<!-- Add margin or padding to prevent overlap -->
+<div class="container py-5 mt-5">
   <div class="row justify-content-center">
     <div class="col-md-6">
       <div class="card shadow-sm p-4">
