--- a/templates/change_password.html
+++ b/templates/change_password.html
@@ -1,5 +1,6 @@
 {% from "bootstrap5/form.html" import render_form %}
 {% include "header.html" %}
+{% block content %}
 
 <div class="container py-5 mt-5">
     <div class="row justify-content-center">
@@ -82,67 +83,5 @@
         </div>
     </div>
 </div>
-
-<style>
-.password-toggle {
-    border-left: 0;
-    border-top-left-radius: 0;
-    border-bottom-left-radius: 0;
-}
-
-/* Add validation styling */
-.was-validated .form-control:invalid,
-.form-control.is-invalid {
-    border-color: #dc3545;
-    padding-right: calc(1.5em + 0.75rem);
-    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 12 12' width='12' height='12' fill='none' stroke='%23dc3545'%3e%3ccircle cx='6' cy='6' r='4.5'/%3e%3cpath d='m5.8 3.6.4.4.4-.4'/%3e%3c/svg%3e");
-    background-repeat: no-repeat;
-    background-position: right calc(0.375em + 0.1875rem) center;
-    background-size: calc(0.75em + 0.375rem) calc(0.75em + 0.375rem);
-}
-
-.was-validated .form-control:valid,
-.form-control.is-valid {
-    border-color: #198754;
-    padding-right: calc(1.5em + 0.75rem);
-    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%23198754' d='M2.3 6.73.6 4.53c-.4-1.04.46-1.4 1.1-.8l1.1 1.4 3.4-3.8c.6-.63 1.6-.27 1.2.7l-4 4.6c-.43.5-.8.4-1.1.1z'/%3e%3c/svg%3e");
-    background-repeat: no-repeat;
-    background-position: right calc(0.375em + 0.1875rem) center;
-    background-size: calc(0.75em + 0.375rem) calc(0.75em + 0.375rem);
-}
-</style>
-
-<script>
-// Toggle password visibility
-document.querySelectorAll('.password-toggle').forEach(button => {
-    button.addEventListener('click', function() {
-        const targetId = this.dataset.target;
-        const targetInput = document.getElementById(targetId);
-        const icon = this.querySelector('i');
-
-        if (targetInput.type === "password") {
-            targetInput.type = "text";
-            icon.classList.remove("fa-eye");
-            icon.classList.add("fa-eye-slash");
-            this.setAttribute('aria-label', 'Hide password');
-        } else {
-            targetInput.type = "password";
-            icon.classList.add("fa-eye");
-            icon.classList.remove("fa-eye-slash");
-            this.setAttribute('aria-label', 'Show password');
-        }
-
-        // Focus back on the input for better UX
-        targetInput.focus();
-    });
-});
-
-// Add Bootstrap validation on form submission
-document.querySelector('form').addEventListener('submit', function(event) {
-    if (!this.checkValidity()) {
-        event.preventDefault();
-        event.stopPropagation();
-    }
-    this.classList.add('was-validated');
-}, false);
-</script>
+{% include 'footer.html' %}
+{% endblock %}
